--- a/src/app/components/products/product-item/product-item.component.css
+++ b/src/app/components/products/product-item/product-item.component.css
@@ -4,18 +4,27 @@
     padding: 20px;
     margin: 6px 6px;        
     border: 1px solid #33B5E5;
-  } 
-  
-  .product-container {
-    margin-top: 64px;
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
-  }
-  
-  .select-input {
-    width: 108px; 
-    margin-bottom: 8px;
-  }
+} 
+
+.product-container {
+  margin-top: 64px;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.select-input {
+  width: 108px; 
+  margin-bottom: 8px;
+}
+
+.clickable {
+  cursor: pointer;
+}
+
+.clickable:hover {
+  color: #0056b3;
+  text-decoration: underline; 
+}
