--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -1,6 +1,6 @@
 <div class="product-index">
         <div *ngFor="let product of products">
-            <app-product-item [product]="product">
+            <app-product-item [product]="product" (productAdded)="onProductAdded($event)">
             </app-product-item>
         </div>
 </div>
