--- a/src/app/components/cart/cart-item/cart-item.component.html
+++ b/src/app/components/cart/cart-item/cart-item.component.html
@@ -1,11 +1,11 @@
-<div class="cart-container">
+<div class="cart-container"  *ngFor="let option of cart?.products">
     <div class="cart-item">
-        <img class="cart-item-image" src="https://images.unsplash.com/photo-1544947950-fa07a98d237f?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80" alt="" />
+        <img class="cart-item-image" src="{{option.url}}" alt="" />
         <div class="cart-item-details">
-            <h3>Book</h3>
-            <p>$ 9.99</p>
-            <p>You can read it!</p>
-            <input type="number" min="0" required />
+            <h3>{{ option.name}}</h3>
+            <p>$ {{ option.price | number: '1.2-2' }}</p>
+            <p>{{ option.description}}</p>
+            <input type="number" min="0" required [(ngModel)]="option.quantity" (change)="updateTotal(option.id, option.quantity)" />
         </div>
     </div>
 </div>
