--- a/src/app/components/layout/header/header.component.html
+++ b/src/app/components/layout/header/header.component.html
@@ -8,7 +8,7 @@
         <div class="vertical-line" style="margin: 0 10px;"></div>
 
         <div class="menu-option p-d-flex p-ai-center p-flex-1"  [routerLink]="['/cart']">
-            <span style="color:red;">1</span>
+            <span style="color:red;">{{ cart?.products?.length || 0 }}</span>
             <span class="p-ml-1">Cart</span>
         </div>
     </div>
