--- a/src/app/components/products/product-item/product-item.component.html
+++ b/src/app/components/products/product-item/product-item.component.html
@@ -7,10 +7,11 @@
     >
     <div class="p-mb-2 clickable" (click)="productDetail(product.id)">{{ product.name }}</div>
     <p class="p-mb-2">{{ product.price | number: '1.2-2' }}</p>
+    <p class="p-mb-2">{{ product.id }}</p>
     <div class="select-input">
-        <select style="width: 108px;">
+        <select style="width: 108px;" (change)="updateQuantity($event, product.id)">
             <option *ngFor="let option of selectOptions" [value]="option.value">{{ option.value }}</option>
         </select>
     </div>
-    <button class="btn btn-primary">Add to Cart</button>
+    <button class="btn btn-primary" (click)="addToCart(product)">Add to Cart</button>
 </div>
